--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,8 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+a:hover {
+  text-decoration: underline;
+  color: white;
+}
